--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,12 +11,13 @@ lifecycleRuntimeKtx = "2.8.3"
 activityCompose = "1.9.0"
 composeBom = "2024.06.00"
 pagingCompose = "3.3.0"
-navigationCompose = "2.7.7"
+navigationCompose = "2.8.0-beta05"
 koin = "3.6.0-Beta4"
 retrofit = "2.11.0"
 coil = "2.6.0"
 uiTextGoogleFonts = "1.6.8"
 splashScreen = "1.0.1"
+iconsExtended = "1.7.0-beta05"
 
 [libraries]
 coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinCoroutinesAndroid" }
@@ -34,6 +35,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-ui-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-ui-material3-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "iconsExtended" }
 androidx-ui-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "pagingCompose" }
 androidx-ui-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
